[workspace]
resolver = "3"
members = [ "cache_server", "cache_protocol" ]

[workspace.dependencies]
bytes = "1.11.0"
chrono = "0.4.43"
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
cache_protocol = { path = "cache_protocol" }

